--- a/css/Styles.css
+++ b/css/Styles.css
@@ -167,7 +167,7 @@ nav{
 .cidade-container { 
    display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 75px;
   flex-wrap: wrap; 
   margin-top: 50px;
 }
@@ -178,26 +178,53 @@ nav{
   padding-top: 15px;
   text-align: center;
 }
-.cidade-container img { 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 1px 1px 30px 5px black;
+.main-title h4{  
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.sobrenatural-container,
+.universidade-container,
+.paranormal-container {
+  position: relative;
   width: 400px;
   height: 500px;
   border-radius: 15px;
+  overflow: hidden;
 }
 
-.cidade-container h2 {  
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  display: block;
+  box-shadow: 1px 1px 30px 5px black;
+}
+
+.body-city {
+  position: absolute;
+  inset: 0; 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  padding: 20px;
+  background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
+}
+
+.body-city h2 {
   color: rgb(255, 187, 0);
-  margin-top: -80px;
-  margin-left: 10px;
+  margin: 0;
+  font-size: 22px;
 }
 
-.cidade-container p {  
-  color: rgb(255, 255, 255);
-  margin-left: 10px;
+.body-city p {
+  color: #fff;
+  margin: 5px 0 0;
+  font-size: 14px;
 }
+
 /* Atualizações */
 .patch{ 
   position: relative;
@@ -244,4 +271,16 @@ nav{
   font-size: 20px;
   line-height: 1.6;
   max-width: 600px;
+}
+
+footer{
+  text-align: center;
+  padding: 35px;
+  background-color: #0202028f;
+}
+
+footer p{
+  margin: 5px;
+  font-size: 14px;
+  color: white;
 }
